--- a/tokens/application.json
+++ b/tokens/application.json
@@ -453,7 +453,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.modifier.fg.onTranslucent.default}",
+                      "value": "{config.color.modifier.fg.onTranslucent}",
                       "space": "hsl"
                     }
                   }
@@ -991,7 +991,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.modifier.fg.onTranslucent.default}",
+                      "value": "{config.color.modifier.fg.onTranslucent}",
                       "space": "hsl"
                     }
                   }
@@ -1249,7 +1249,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.modifier.fg.onTranslucent.default}",
+                      "value": "{config.color.modifier.fg.onTranslucent}",
                       "space": "hsl"
                     }
                   }
@@ -1507,7 +1507,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.modifier.fg.onTranslucent.default}",
+                      "value": "{config.color.modifier.fg.onTranslucent}",
                       "space": "hsl"
                     }
                   }
@@ -1782,7 +1782,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.modifier.fg.onTranslucent.default}",
+                      "value": "{config.color.modifier.fg.onTranslucent}",
                       "space": "hsl"
                     }
                   }
