fix: disabled > fg

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1832,7 +1832,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "lighten",
-                    "$value": "0.88",
+                    "value": "0.88",
                     "space": "hsl"
                   }
                 }
@@ -1859,8 +1859,8 @@
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
-                    "type": "alpha",
-                    "value": "0.1",
+                    "type": "lighten",
+                    "value": "0.88",
                     "space": "hsl"
                   }
                 }
