test: lighten/darken

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -165,7 +165,7 @@
                 "$extensions": {
                   "studio.tokens": {
                     "modify": {
-                      "type": "darken",
+                      "type": "lighten",
                       "value": "{config.color.modifier.bg.other.hover}",
                       "space": "hsl"
                     }
@@ -178,7 +178,7 @@
                 "$extensions": {
                   "studio.tokens": {
                     "modify": {
-                      "type": "darken",
+                      "type": "lighten",
                       "value": "{config.color.modifier.bg.other.active}",
                       "space": "hsl"
                     }
