--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1859,7 +1859,7 @@
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
-                    "type": "lighten",
+                    "type": "alpha",
                     "value": "0.88",
                     "space": "hsl"
                   }
