fix: disabled mode

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1800,7 +1800,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "lighten",
-                    "value": "0.88",
+                    "value": "0.72",
                     "space": "hsl"
                   }
                 }
@@ -1813,7 +1813,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "alpha",
-                    "value": "0.04",
+                    "value": "0.08",
                     "space": "hsl"
                   }
                 }
@@ -1832,7 +1832,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "lighten",
-                    "value": "0.88",
+                    "value": "0.72",
                     "space": "hsl"
                   }
                 }
@@ -1859,8 +1859,8 @@
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
-                    "type": "alpha",
-                    "value": "0.88",
+                    "type": "lighten",
+                    "value": "0.72",
                     "space": "hsl"
                   }
                 }
